index-showcase, style and extra space correct

--- a/style.css
+++ b/style.css
@@ -33,25 +33,24 @@ body {
 }
 
 .showcase {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 92%;
+  padding-top: 100px;
   border-bottom-left-radius: 100px;
-  margin-bottom: 10vh;
+  margin: auto auto 10vh auto;
   background-image: url(./images/header-shapes-mobile.svg);
   background-repeat: no-repeat;
 }
 
-.hero {
-  width: 92%;
-  margin: auto;
-  padding-top: 100px;
-}
-
-.hero h1 {
+.showcase h1 {
   font-size: 50px;
   font-weight: bold;
   line-height: normal;
 }
 
-.hero p {
+.showcase p {
   margin-top: 0.25vh;
 }
 
